commit on master

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 										<p>Python Developer | AR Enthusiast</p>
 									</header>
 									<p>Thanks for checking out my profile.</p>
-									<p><a href="assets/atharvakawaderesume.pdf">In-depth Profile Here</a></p>
+									<p><a href="assets/atharvakawaderesume.pdf">Resume</a></p>
 									<p>atharvakawade@protonmail.com</p>
 									<ul class="icons">
 										<li><a href="https://www.github.com/ask0ne" class="icon brands fa-github"><span class="label">Github</span></a></li>
