--- a/index.html
+++ b/index.html
@@ -58,10 +58,13 @@
 									<br>
 									<ul class="feature-icons">
 										<li class="icon solid fa-code">Python</li>
-										<blockquote>I'm actively working on improving my programming capabilities using Python. I like Python because it's easy to learn and fun to master!</blockquote>
+										<p class="exp">Experience : 8 weeks (AI Developer in R&D at Softnerve Pvt Ltd) | MTA Certified (Microsoft Certifications)</p>
+										<blockquote>I'm actively working on improving my programming capabilities using Python. My personal projects are all developed using Python one way or the other.</blockquote>
 										<li class="icon solid fa-window-maximize">Freelance Front-End Development</li>
+										<p class="exp">Experience : Developing front-end UI/UX since 2015 | Participated and won multiple institute level competitions</p>
 										<blockquote>Freelancing widened my perspective on client relations and how to balance client expectations with feasible solutions.</blockquote>
 										<li class="icon solid fa-text-height">Natural Language Processing</li>
+										<p class="exp">Pursuing NLP specialization by deeplearning offered by Coursera</p>
 										<blockquote>I'm amazed by the fact that a machine can process and analyze natural language. I think it has many applications and thus I'm intrigued by it.</blockquote>
 										<li class="icon solid fa-glasses">Computer Vision</li>
 										<blockquote>Ever since I saw the potential of AR, I've been enhancing my skills in computer vision in order to work on it.</blockquote>
