--- a/index.html
+++ b/index.html
@@ -1,117 +1,295 @@
-<!DOCTYPE HTML>
-<!--
-	Read Only by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-	<head>
-		<title>Atharva Kawade</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="is-preload">
+<!doctype html>
+<html lang="en">
 
-		<!-- Header -->
-			<section id="header">
-				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#"> </a></h1>
-				</header>
-				<nav id="nav">
-					<ul>
-						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Skills</a></li>
-						<li><a href="#three">Projects</a></li>
-					</ul>
-				</nav>
-			</section>
+<head>
+	<!-- Required meta tags -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script src="https://kit.fontawesome.com/08adc2e0ad.js" crossorigin="anonymous"></script>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+	<link href="assets/css/main.css" rel="stylesheet">
+	<title>Atharva Kawade | Portfolio</title>
+</head>
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+<body>
+	<div class="padd"></div>
+	<div class="main row">
+		<div class="main-text col-md-12 col-lg-6">
+			<div class="row">
+				<div class="container">
+					<h3 class="main-text">HELLO, I AM</h3>
+					<h1 class="name">ATHARVA KAWADE</h1>
+					<h3 class="main-text">PYTHON HOBBYIST | AR ENTHUSIAST</h3>
 
-				<!-- Main -->
-					<div id="main">
-
-						<!-- One -->
-							<section id="one">
-								<div class="container">
-									<header class="major">
-										<h2>Atharva Kawade</h2>
-										<p>Python Developer | AR Enthusiast</p>
-									</header>
-									<p>Thanks for checking out my profile.</p>
-									<p><a href="assets/atharvakawaderesume.pdf">Resume</a></p>
-									<p>atharvakawade@protonmail.com</p>
-									<ul class="icons">
-										<li><a href="https://www.github.com/ask0ne" class="icon brands fa-github"><span class="label">Github</span></a></li>
-										<li><a href="https://www.linkedin.com/in/atharvakawade/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									</ul>
-								</div>
-							</section>
-
-						<!-- Two -->
-							<section id="two">
-								<div class="container">
-									<h3>Things I Do</h3>
-									<br>
-									<ul class="feature-icons">
-										<li class="icon solid fa-code">Python</li>
-										<p class="exp">Experience : 8 weeks (AI Developer in R&D at Softnerve Pvt Ltd) | MTA Certified (Microsoft Certifications)</p>
-										<blockquote>I'm actively working on improving my programming capabilities using Python. My personal projects are all developed using Python one way or the other.</blockquote>
-										<li class="icon solid fa-window-maximize">Freelance Front-End Development</li>
-										<p class="exp">Experience : Developing front-end UI/UX since 2015 | Participated and won multiple institute level competitions</p>
-										<blockquote>Freelancing widened my perspective on client relations and how to balance client expectations with feasible solutions.</blockquote>
-										<li class="icon solid fa-text-height">Natural Language Processing</li>
-										<p class="exp">Pursuing NLP specialization by deeplearning offered by Coursera</p>
-										<blockquote>I'm amazed by the fact that a machine can process and analyze natural language. I think it has many applications and thus I'm intrigued by it.</blockquote>
-										<li class="icon solid fa-glasses">Computer Vision</li>
-										<blockquote>Ever since I saw the potential of AR, I've been enhancing my skills in computer vision in order to work on it.</blockquote>
-									</ul>
-								</div>
-							</section>
-
-						<!-- Three -->
-							<section id="three">
-								<div class="container">
-									<h3>Projects</h3>
-									<div class="features">
-										<article>
-											<a href="https://github.com/ask0ne/ocrator" class="image"><img src="images/pic01.jpg" alt="GitHub link"/></a>
-											<div class="inner">
-												<h4>Ocrator</h4>
-												<p>Inspired by Google Lens. With Optical Character Recognition technology combined with text-to-speech, one can simply point the smartphone camera to a piece of text and hear what is written in their preferred language.</p>
-											</div>
-										</article>
-										<article>
-											<a href="https://github.com/ask0ne/jansampark_covid19" class="image"><img src="images/pic02.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>JanSampark</h4>
-												<p>A community oriented platform developed to unite various manufacturers, vendors and organizations in order to pool their resources for efficient utilizatioon during the Covid-19 pandemic. MJFCODE19 Hackathon submission.</p>
-											</div>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Know Your News</h4>
-												<p>Know Your News provides a filter to one's daily intake of news by categorizing them into positive, negative and neutral news using sentiment analysis.</p>
-											</div>
-										</article>
-									</div>
-								</div>
-							</section>
-					</div>
+				</div>
 			</div>
+			<div class="row icon-links">
+				<div class="col-md-12 col-lg-5">
+					<div class="row">
+						<div class="col-1 col-md-1 col-lg-3">
+							<a href="assets/AtharvaKawadeResume.pdf"><i class="fas fa-file-contract fa-2x"
+									title="Resume"></i></a>
+						</div>
+						<div class="col-1 col-md-1 col-lg-3">
+							<a href="https://www.github.com/ask0ne"><i class="fab fa-github fa-2x"
+									title="GitHub"></i></a>
+						</div>
+						<div class="col-1 col-md-1 col-lg-3">
+							<a href="https://www.linkedin.com/in/atharvakawade/"><i class="fab fa-linkedin-in fa-2x"
+									title="LinkedIn"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-6 col-lg-6 avatar">
+			<img src="images/avatar.jpg" class="avatar img-fluid">
+		</div>
+	</div>
+	<div class="navigation row" id="navbar">
+		<div onclick="gototop()" style="cursor: pointer;" class="col-2"><i class="fas fa-chevron-up"></i></div>
+		<div onclick="displayAbout()" style="cursor: pointer;" class="col-2">ABOUT</div>
+		<div onclick="displaySkills()" style="cursor: pointer;" class="col-2">SKILLS</div>
+		<div onclick="displayProjects()" style="cursor: pointer;" class="col-2">PROJECTS</div>
+		<div onclick="displayExtras()" style="cursor: pointer;" class="col-2">ACHIEVEMENTS</div>
+	</div>
+	<div class="padd"></div>
+	<div class="about-section" id="about">
+		<div class="row">
+			<div class="col-md-12 col-lg-5">
+				<div class="section-heading-left">
+					<h3 class="heading">ABOUT ME</h3>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-12 col-lg-5">
+				<div class="row">
+					<div class="col-6 col-lg-12">
+						<div class="container">
+							<img src="images/working-about.svg" class="img-fluid">
+						</div>
+					</div>
+					<div class="col-6 col-lg-12">
+						<div class="section-title">
+							<a href="mailto:atharva.kawade1999@gmail.com"
+								style="text-decoration: none;">atharva.kawade1999@gmail.com</a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-12 col-lg-7">
+				<div class="container">
+					<div class="description" style="margin-right: 10rem;">
+						<div class="container-fluid">
+							<p class="description-text">Pursuing B.E in Computer Engineering (MAY 2021) at Pune
+								University
+							</p>
+						</div>
+					</div>
+					<div class="description"
+						style="margin-right: 5rem; margin-top: 2rem !important; margin-left: 5rem;">
+						<div class="container-fluid">
+							<p class="description-text">Former AI Intern at <a href="">Softnerve technology Pvt Ltd</a>
+								(APRIL 2020 -- MAY 2020)</p>
+						</div>
+					</div>
+					<div class="description" style="margin-top: 2rem !important; margin-right: 10rem;">
+						<div class="container-fluid">
+							<p class="description-text">Freelance front-end developer (2019 -- 2020)</p>
+						</div>
+					</div>
+					<div class="description"
+						style="margin-right: 5rem; margin-top: 2rem !important; margin-left: 5rem;">
+						<div class="container-fluid">
+							<p class="description-text">Like solving puzzles</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="skills-section" id="skills">
+		<div class="row">
+			<div class="col-sm-12 col-md-7">
+				<div style="margin-left: 3rem; margin-top:2rem;">
+					<img class="img-fluid" src="images/skills.png" style="max-height: 145px;">
+				</div>
+			</div>
+			<div class="col-sm-12 col-md-5">
+				<div class="section-heading-right">
+					<h3 class="heading">THINGS I DO</h3>
+				</div>
+			</div>
+		</div>
+		<div class="description-container">
+			<div class="row">
+				<div class="col-sm-12 col-md-6">
+					<div class="description" style="min-height: 10rem;">
+						<p class="description-heading"><i class="fab fa-python me-3"></i>Python</p>
+						<div class="container-fluid">
+							<p class="description-text" style="font-size: 1rem !important;">Experience: 8 weeks (AI
+								Developer in R&D at Softnerve Pvt Ltd) | MTA Certified</p>
+							<p class="description-text" style="font-size: 1rem !important;">I'm actively working on
+								improving my programming capabilities using Python. Thus, most if not all my projects
+								are
+								developed in Python.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-12 col-md-6">
+					<div class="description" style="min-height: 10rem;">
+						<p class="description-heading"><i class="fas fa-database me-3"></i>Web Scraping | Data
+							Cleaning
+							and automation</p>
+						<div class="container-fluid">
+							<p class="description-text" style="font-size: 1rem !important;">BeautifulSoup4, ParseHub |
+								Python Automation - Re, Selenium web driver, Pandas</p>
+							<p class="description-text" style="font-size: 1rem !important;">Scraped handful of websites
+								of
+								various category and technology stacks such as news, hotels, yellowpage
+								websites. Furthermore the data was cleaned and organized using Python.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-12 col-md-6">
+					<div class="description" style="min-height: 10rem;">
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+						<p class="description-heading"><i class="fas fa-file-code me-3"></i>Web Development (Django
+							|
+							Basic Front-end)</p>
+						<div class="container-fluid">
+							<p class="description-text" style="font-size: 1rem !important;">Experience: Developing
+								static
+								websites since 2015</p>
+							<p class="description-text" style="font-size: 1rem !important;">Recently started tinkering
+								in
+								Python-Flask and Python-Django projects</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-12 col-md-6">
+					<div class="description" style="min-height: 10rem;">
+						<p class="description-heading"><i class="fas fa-glasses me-3"></i>Computer Vision</p>
+						<div class="container-fluid">
+							<p class="description-text" style="font-size: 1rem !important;">Ever since I saw the
+								potential
+								of AR, I've been looking for opportunities to work on the same.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	</div>
+	<div class="projects-section" id="projects">
+		<div class="row">
+			<div class="col-md-5">
+				<div class="section-heading-left">
+					<h3 class="heading">STUFF I BUILT</h3>
+				</div>
+			</div>
+		</div>
+		<div class="description-container">
+			<div class="row">
+				<div class="col-sm-12 col-md-6 col-lg-3">
+					<div class="description">
+						<p class="description-heading">Ocrator</p>
+						<div class="container-fluid">
+							<p class="description-text" style="font-size: 0.9rem;">Inspired by Google Lens. With Optical
+								Character Recognition technology combined with text-to-speech, just simply point the
+								smartphone camera to a piece of text and hear what is written in their preferred
+								language.
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-12 col-md-6 col-lg-3">
+					<div class="description">
+						<p class="description-heading">Jansampark</p>
+						<div class="container-fluid">
+							<p class="description-text" style="font-size: 0.9rem;">MJFCODE19 Hackathon submission.
+								Designed
+								a developed a fullstack Django web application. A community oriented platform to unite
+								various organizations to pool their resources for efficient utlization during Covid-19
+								pandemic.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-12 col-md-6 col-lg-3">
+					<div class="description">
+						<p class="description-heading">Know Your News</p>
+						<div class="container-fluid">
+							<p class="description-text" style="font-size: 0.9rem;">Web application that crawls latest
+								news
+								from the internet from a few sources and categorizes them into categories such as
+								sports/health/lifestyle and into positive and negative news. Used pretrained VADER for
+								sentiment analysis.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-12 col-md-6 col-lg-3">
+					<div class="description">
+						<p class="description-heading">e-wallet Web Application</p>
+						<div class="container-fluid">
+							<p class="description-text" style="font-size: 0.9rem;">Designed and developed a Python-Flask
+								fullstack web application. Some of the modules and features implemented were users,
+								payments, transaction history and many more.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="achievements-section" id="achievements">
+		<div class="row">
+			<div class="col-md-7"></div>
+			<div class="col-md-5">
+				<div class="section-heading-right">
+					<h3 class="heading">SO FAR...</h3>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-7">
+				<div class="description-container">
+					<div class="description">
+						<div class="container-fluid">
+							<p class="description-text" style="font-size: 1rem;">Presented and published paper titled <a
+									href="https://link.springer.com/chapter/10.1007/978-981-33-4355-9_6">Detection
+									and
+									Monitoring of Alzheimer’s Disease Using Serious Games—A Study</a> in Springer
+								Journal
+								(January 2021)</p>
+						</div>
+					</div>
+					<div class="description">
+						<div class="container-fluid">
+							<p class="description-text" style="font-size: 1rem;">Organized and moderated a 2-day
+								intra-college competitive coding
+								competition on Hackerrank. Developed questions and test cases. Moderated the entire
+								event.
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-5">
+				<div style="text-align:center; margin: 1rem;">
+					<img src="images/concept-of-man-got-success-and-achieving-goal.svg" class="img-fluid"
+						style="max-width: 70%;">
+				</div>
+			</div>
+		</div>
+	</div>
+	</div>
 
-	</body>
+	<script type="text/javascript" src="assets/js/main.js"></script>
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+		crossorigin="anonymous"></script>
+</body>
+
 </html>
