--- a/index.html
+++ b/index.html
@@ -83,27 +83,26 @@
 				<div class="container">
 					<div class="description" style="margin-right: 10rem;">
 						<div class="container-fluid">
-							<p class="description-text">Pursuing B.E in Computer Engineering (MAY 2021) at Pune
-								University
+							<p class="description-text">Software Engineer at a Fintech start up
 							</p>
 						</div>
 					</div>
 					<div class="description"
 						style="margin-right: 5rem; margin-top: 2rem !important; margin-left: 5rem;">
 						<div class="container-fluid">
-							<p class="description-text">Former AI Intern at <a href="">Softnerve technology Pvt Ltd</a>
-								(APRIL 2020 -- MAY 2020)</p>
+							<p class="description-text">Former AI Intern (APRIL 2020 -- MAY 2020) and Freelance
+								front-end Developer (2019 -- 2020)</p>
 						</div>
 					</div>
 					<div class="description" style="margin-top: 2rem !important; margin-right: 10rem;">
 						<div class="container-fluid">
-							<p class="description-text">Freelance front-end developer (2019 -- 2020)</p>
+							<p class="description-text">Like solving puzzles</p>
 						</div>
 					</div>
 					<div class="description"
 						style="margin-right: 5rem; margin-top: 2rem !important; margin-left: 5rem;">
 						<div class="container-fluid">
-							<p class="description-text">Like solving puzzles</p>
+							<p class="description-text">Excited about DeFi and Web3</p>
 						</div>
 					</div>
 				</div>
@@ -129,26 +128,25 @@
 					<div class="description" style="min-height: 10rem;">
 						<p class="description-heading"><i class="fab fa-python me-3"></i>Python</p>
 						<div class="container-fluid">
-							<p class="description-text" style="font-size: 1rem !important;">Experience: 8 weeks (AI
-								Developer in R&D at Softnerve Pvt Ltd) | MTA Certified</p>
-							<p class="description-text" style="font-size: 1rem !important;">I'm actively working on
-								improving my programming capabilities using Python. Thus, most if not all my projects
-								are
-								developed in Python.</p>
+							<p class="description-text" style="font-size: 1rem !important;">Level: Intermediate | MTA
+								Certified</p>
+							<p class="description-text" style="font-size: 1rem !important;">I like the ease of coding
+								that Python provides. Most of the data manipulation tools are easy to code in Python
+								(web scraping, data shaping and pipelining among a few)</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-sm-12 col-md-6">
 					<div class="description" style="min-height: 10rem;">
-						<p class="description-heading"><i class="fas fa-database me-3"></i>Web Scraping | Data
-							Cleaning
-							and automation</p>
+						<p class="description-heading"><i class="fas fa-database me-3"></i>Data Stuff (Scraping,
+							pipelining and shaping)</p>
 						<div class="container-fluid">
-							<p class="description-text" style="font-size: 1rem !important;">BeautifulSoup4, ParseHub |
-								Python Automation - Re, Selenium web driver, Pandas</p>
-							<p class="description-text" style="font-size: 1rem !important;">Scraped handful of websites
-								of
-								various category and technology stacks such as news, hotels, yellowpage
+							<p class="description-text" style="font-size: 1rem !important;">Level: Beginner~Intermediate
+							</p>
+							<p class="description-text" style="font-size: 1rem !important;">
+								Hands on experience with data pipelining and ETL process.<br>
+								Scraped handful of websites of various category and technology stacks such as news,
+								hotels, yellowpage
 								websites. Furthermore the data was cleaned and organized using Python.</p>
 						</div>
 					</div>
@@ -156,26 +154,22 @@
 				<div class="col-sm-12 col-md-6">
 					<div class="description" style="min-height: 10rem;">
 
-						<p class="description-heading"><i class="fas fa-file-code me-3"></i>Web Development (Django
-							|
-							Basic Front-end)</p>
+						<p class="description-heading"><i class="fas fa-file-code me-3"></i>Backend Developer</p>
 						<div class="container-fluid">
-							<p class="description-text" style="font-size: 1rem !important;">Experience: Developing
-								static
-								websites since 2015</p>
-							<p class="description-text" style="font-size: 1rem !important;">Recently started tinkering
-								in
-								Python-Flask and Python-Django projects</p>
+							<p class="description-text" style="font-size: 1rem !important;">Level: Intermediate</p>
+							<p class="description-text" style="font-size: 1rem !important;">Extensively worked on
+								creating micro APIs.<br>
+								Tinkered a lot in Python frameworks such as Python-Flask</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-sm-12 col-md-6">
 					<div class="description" style="min-height: 10rem;">
-						<p class="description-heading"><i class="fas fa-glasses me-3"></i>Computer Vision</p>
+						<p class="description-heading"><i class="fas fa-glasses me-3"></i>More Data Stuff
+							(Visualisation)</p>
 						<div class="container-fluid">
-							<p class="description-text" style="font-size: 1rem !important;">Ever since I saw the
-								potential
-								of AR, I've been looking for opportunities to work on the same.</p>
+							<p class="description-text" style="font-size: 1rem !important;">Hands on experience with
+								creating dashbaords in Microsoft Power BI based on live data.</p>
 						</div>
 					</div>
 				</div>
@@ -195,7 +189,8 @@
 			<div class="row">
 				<div class="col-sm-12 col-md-6 col-lg-3">
 					<div class="description">
-						<p class="description-heading">Ocrator</p>
+						<a href="https://github.com/ask0ne/ocrator"><img
+								src="https://gh-card.dev/repos/ask0ne/ocrator.png" class="img-fluid"></a>
 						<div class="container-fluid">
 							<p class="description-text" style="font-size: 0.9rem;">Inspired by Google Lens. With Optical
 								Character Recognition technology combined with text-to-speech, just simply point the
@@ -207,7 +202,8 @@
 				</div>
 				<div class="col-sm-12 col-md-6 col-lg-3">
 					<div class="description">
-						<p class="description-heading">Jansampark</p>
+						<a href="https://github.com/ask0ne/jansampark_covid19"><img
+								src="https://gh-card.dev/repos/ask0ne/jansampark_covid19.png" class="img-fluid"></a>
 						<div class="container-fluid">
 							<p class="description-text" style="font-size: 0.9rem;">MJFCODE19 Hackathon submission.
 								Designed
