--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<div class="col-md-12 col-lg-5">
 					<div class="row">
 						<div class="col-1 col-md-1 col-lg-3">
-							<a href="assets/atharvakawaderesume.pdf"><i class="fas fa-file-contract fa-2x"
+							<a href="assets/AtharvaKawadeResume.pdf"><i class="fas fa-file-contract fa-2x"
 									title="Resume"></i></a>
 						</div>
 						<div class="col-1 col-md-1 col-lg-3">
@@ -262,10 +262,13 @@
 					</div>
 					<div class="description">
 						<div class="container-fluid">
-							<p class="description-text" style="font-size: 1rem;">Organized and moderated a 2-day
-								intra-college competitive coding
-								competition on Hackerrank. Developed questions and test cases. Moderated the entire
-								event.
+							<p class="description-text" style="font-size: 1rem;">Developed dashboards in Power BI including data pipelining and automation
+							</p>
+						</div>
+					</div>
+					<div class="description">
+						<div class="container-fluid">
+							<p class="description-text" style="font-size: 1rem;">Worked on a wide variety of data related processes such as migration, scraping, cleaning, automation and visualisation.
 							</p>
 						</div>
 					</div>
